syntax="proto3";
option  go_package="/genproto";
package proto;

import  "common.proto";



message  CreateTerminalRequest{
      string  StationId=1;
}
message  UpdateTerminalRequest{
    string  Id =1;
    string  StationId=2;

}
message  TerminalFilterRequest{
    string StationId=1;
    Filter LimitOffset=2;
}
message  TerminalResponse{
   string  Id=1;
   string  StationId=2;
   string  CreatedAt=3;
   string  UpdatedAt=4;
   string  DeletedAt=5;
}
message  TerminalsResponse{
   repeated  TerminalResponse TerminalResponses=1;
}
service  TerminalService{
   rpc CreateTerminal(CreateTerminalRequest)returns(Void);
   rpc UpdateTerminal(UpdateTerminalRequest)returns (Void);
   rpc DeleteTerminal(ByIdRequest)returns(Void);
   rpc GetTerminal(TerminalFilterRequest)returns(TerminalsResponse);
}

